# napari

./: .cirrus.yml  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  connections.json  connections.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  uml.py
.github/workflows/: build_docs.yml  make_bundle.yml  make_bundle_conda.yml  make_release.yml  reusable_pip_test.yml  test_comprehensive.yml  test_pull_requests.yml  test_typing.yml  test_vendored.yml  test_work.yml  tests.yml  update_version.py
bundle/: build.sh  napari.spec
docs/: copy-docs.py
docs/developers/: contributing.md
docs/release/: release_0_4_17.md
docs/source/: conf.py
docs/source/plugins/: for_plugin_developers.rst
examples/: add_complex_valued_image.py
napari/: __main__.py  conftest.py  types.py  viewer.py  window.py
napari/_qt/: __init__.py  qt_layerlist.py  qt_main_window.py  qt_range_slider_popup.py  qt_viewer.py
napari/_qt/containers/: _base_item_model.py  _base_item_view.py  _layer_delegate.py  qt_list_model.py
napari/_qt/dialogs/: qt_command_palette.py
napari/_qt/layer_controls/: qt_image_controls.py  qt_layer_controls_container.py
napari/_qt/layers/: qt_base_layer.py  qt_image_base_layer.py  qt_image_layer.py
napari/_qt/menus/: file_menu.py
napari/_qt/qt_resources/: _icons.py
napari/_qt/widgets/: qt_action_context_menu.py  qt_dims.py  qt_model_menu.py  qt_range_slider.py  qt_viewer_buttons.py  qt_welcome.py
napari/_tests/: test_examples.py  test_napari.py  test_reuse.py  test_viewer.py  utils.py
napari/_vispy/: canvas.py  vispy_base_layer.py  vispy_image_layer.py  volume.py
napari/_vispy/layers/: base.py  group.py  image.py
napari/_vispy/utils/: gl.py  visual.py
napari/_vispy/visuals/: image.py  volume.py
napari/components/: add_layers_mixin.py  layerlist.py  viewer_model.py
napari/layers/: _layer_actions.py  _source.py
napari/layers/base/: base.py
napari/layers/image/: _image_constants.py  _image_utils.py  image.py
napari/layers/labels/: labels.py
napari/layers/layergroup/: layergroup.py
napari/layers/points/: points.py
napari/layers/shapes/: shapes.py
napari/layers/utils/: layer_utils.py
napari/plugins/: __init__.py  _builtins.py  _npe2.py  exceptions.py
napari/resources/: __init__.py  build_icons.py
napari/utils/: _injection.py  _key_codes.py  _testsupport.py  appdirs.py  complex.py  event.py  event_handler.py  info.py  misc.py  property_view.py  validators.py
napari/utils/_tests/: test_info.py
napari/utils/actions/: __init__.py  _menus.py  _plugin_aware_registries.py  _register_action.py  _registries.py  _types.py
napari/utils/colormaps/: colormap_utils.py
napari/utils/commands/: __init__.py  _menus.py  _registries.py  _types.py
napari/utils/context/: __init__.py  _expressions.py
napari/utils/events/: __init__.py  event.py  event_utils.py  (+1 more)
requirements/: test.txt
(+14 files in other folders)
