[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    dask[array]>=2.1.0
    cachey>=0.2.1  # for dask opportunistic caching
    fsspec>=0.3.3
    imageio>=2.5.0
    Pillow!=7.1.0,!=7.1.1  # not a direct dependency, but 7.1.0 and 7.1.1 broke imageio
    ipykernel>=5.1.1
    numpy>=1.10.0
    qtpy>=1.7.0
    qtconsole>=4.5.1
    scipy>=1.2.0
    vispy>=0.6.4
    IPython>=7.7.0
    backcall>=0.1.0
    PyOpenGL>=3.1.0
    PyYAML>=5.1
    wrapt>=1.11.1
    psutil>=5.0
    numpydoc>=0.9.2
    napari-plugin-engine>=0.1.5
    napari-svg==0.1.2
    tifffile>=2020.2.16
    toolz>=0.10.0
    importlib-metadata>=1.5.0 ; python_version < '3.8'
    # Qt version is managed from setup.py to install PySide2 when no Qt libraries are found
tests_require =
    pandas
    pytest
    pytest-faulthandler
    pytest-qt
    pytest-ordering
    pytest-timeout
    xarray
    zarr
    scikit-image
    pooch

[options.extras_require]
pyside2 = PySide2>=5.12.3
pyqt5 = PyQt5>=5.12.3

[options.entry_points]
console_scripts =
    napari = napari.__main__:main

[metadata]
name = napari
url = https://github.com/napari/napari
license = BSD 3-Clause
license_file = LICENSE
description = n-dimensional array viewer in Python.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[versioneer]
VCS = git
style = pep440
versionfile_source = napari/_version.py
versionfile_build = napari/_version.py
tag_prefix = v
parentdir_prefix = napari-

[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)  (sometimes too annoying)
# E741 ambiguous variable name
# W503	Line break occurred before a binary operator
# C901 McCabe complexity test. Would be nice to reenable, but takes work
ignore = E203,W503,E501,C901,E741
max-line-length = 79
max-complexity = 18
exclude = vendored,__init__.py,examples,benchmarks,napari/resources/*.py
